--- a/app/views/waiters/show.html.erb
+++ b/app/views/waiters/show.html.erb
@@ -4,6 +4,24 @@
 
 <div class="panel panel-default">
   <div class="panel-heading">
+    <h3 class="panel-title">Availabilities</h3>
+  </div>
+  <div class="panel-body">
+    <div style="padding-top: 10px">
+      <%= form_for [:add_availability, @waiter], :html => {:class => 'form-inline' } do |f| %>
+        <div class="form-group">
+          <label>Add availability</label>
+        </div>
+        <div class="form-group">
+          <%= f.submit 'Add', :class => 'btn btn-primary' %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
+
+<div class="panel panel-default">
+  <div class="panel-heading">
     <h3 class="panel-title">Skills</h3>
   </div>
   <div class="panel-body">
@@ -13,21 +31,19 @@
       </div>
     <% else %>
       <table class="table table-striped">
-        <% @waiter.waiter_skills.each do |ws| %>
-          <% if ws.persisted? %>
-            <tr>
-              <td style="width: 50px;">
-                <%= link_to remove_skill_waiter_path(@waiter, ws.id.to_i), :method => :patch, :data => {:confirm => 'Are you sure?' } do %>
-                  <span class="label label-danger">
-                    <i class="fa fa-trash-o"></i>
-                  </span>
-                <% end %>
-              </td>
-              <td>
-                <%= ws.title %>
-              </td>
-            </tr>
-          <% end %>
+        <% @waiter.waiter_skills.select(&:persisted?).each do |ws| %>
+          <tr>
+            <td style="width: 50px;">
+              <%= link_to remove_skill_waiter_path(@waiter, ws.id.to_i), :method => :patch, :data => {:confirm => 'Are you sure?' } do %>
+                <span class="label label-danger">
+                  <i class="fa fa-trash-o"></i>
+                </span>
+              <% end %>
+            </td>
+            <td>
+              <%= ws.title %>
+            </td>
+          </tr>
         <% end %>
       </table>
     <% end %>
