--- a/app/views/waiters/show.html.erb
+++ b/app/views/waiters/show.html.erb
@@ -7,10 +7,40 @@
     <h3 class="panel-title">Availabilities</h3>
   </div>
   <div class="panel-body">
+    <% if @waiter.availabilities.all.empty? %>
+      <div class="alert alert-warning text-center">
+        No records yet.
+      </div>
+    <% else %>
+      <table class="table table-striped">
+        <% @waiter.availabilities.select(&:persisted?).each do |a| %>
+          <tr>
+            <td style="width: 50px;">
+              <%= link_to [@waiter, a], :method => :delete, :data => {:confirm => 'Are you sure?' } do %>
+                <span class="label label-danger">
+                  <i class="fa fa-trash-o"></i>
+                </span>
+              <% end %>
+            </td>
+            <td style="width: 100px;">
+              <code><%= a.day_string %></code>
+            </td>
+            <td>
+              <%= a.started_time.strftime('%H:%M') %> -
+              <%= a.ended_time.strftime('%H:%M') %>
+            </td>
+          </tr>
+        <% end %>
+      </table>
+    <% end %>
     <div style="padding-top: 10px">
-      <%= form_for [:add_availability, @waiter], :html => {:class => 'form-inline' } do |f| %>
+      <%= form_for [@waiter, @availability], :html => {:class => 'form-inline' } do |f| %>
         <div class="form-group">
-          <label>Add availability</label>
+          <label>Add availability from</label>
+          <%= f.select :day_of_week, Availability.days_select, {}, {:class => 'form-control' } %>
+          <%= f.time_field :started_time, :value => '08:00', :class => 'form-control' %>
+          <label>to</label>
+          <%= f.time_field :ended_time, :value => '17:00', :class => 'form-control' %>
         </div>
         <div class="form-group">
           <%= f.submit 'Add', :class => 'btn btn-primary' %>
