--- a/app/views/waiters/show.html.erb
+++ b/app/views/waiters/show.html.erb
@@ -82,7 +82,7 @@
         <%= form_for [:add_skill, @waiter], :html => {:class => 'form-inline' } do |f| %>
           <div class="form-group">
             <label>Add skill</label>
-            <%= f.select :waiter_skills, @waiter.remaining_skills.collect { |x| [ x.title, x.id ] }, {}, {:class => 'form-control' } %>
+            <%= f.select :waiter_skills, @waiter.remaining_skills_select, {}, {:class => 'form-control' } %>
           </div>
           <div class="form-group">
             <%= f.submit 'Add', :class => 'btn btn-primary' %>
