--- a/app/views/waiter_skills/edit.html.erb
+++ b/app/views/waiter_skills/edit.html.erb
@@ -1,4 +1,4 @@
 <div class="page-header">
-  <h2>Add waiter skill</h2>
+  <h2>Edit waiter skill</h2>
 </div>
 <%= render :partial => 'form', :locals => {:waiter_skill => @waiter_skill } %>
