--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,20 +1,10 @@
 <%= form_for event, :html => {:class => 'form-horizontal' } do |f| %>
-  <div class="form-group">
-    <%= f.label :title, :class => 'col-sm-2 control-label' %>
-    <div class="col-sm-6">
-      <%= f.text_field :title, :class => 'form-control' %>
-    </div>
-  </div>
+  <%= h_form_group_text(f, :title) %>
   <div class="form-group">
     <%= f.label :client, :class => 'col-sm-2 control-label' %>
     <div class="col-sm-6">
       <%= f.select :client_id, Client.client_select, {:include_blank => true }, {:class => 'form-control' } %>
     </div>
   </div>
-  <div class="form-group">
-    <div class="col-sm-6 col-sm-offset-2">
-      <%= f.submit 'Save', :class => 'btn btn-primary' %>
-      <%= link_to "Back", root_path, :class => 'btn btn-link' %>
-    </div>
-  </div>
+  <%= h_form_group_submit(f) %>
 <% end %>
